# intersection_coordination

./: .gitignore  CMakeLists.txt  README.md
include/scheduler/: scheduler.hpp  vehicle.hpp
src/: main.cpp  scheduler.cpp  vehicle.cpp
